// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Registration result component renders registration complete properly 1`] = `
<View
  flex={1}
  flexDirection="column"
  justifyContent="space-between"
  m={4}
  mt={6}
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "marginBottom": 20,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 40,
      },
      undefined,
    ]
  }
>
  <View>
    <View
      alignItems="center"
      style={
        Array [
          Object {},
          undefined,
        ]
      }
    >
      <Image
        height={20}
        source={
          Object {
            "testUri": "../../../images/circle-check-green.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
            undefined,
          ]
        }
        width={20}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        className="sc-bwzfXH uTxCW"
        ellipsizeMode="tail"
        fontFamily="AGaramondPro-Semibold"
        fontSize="22px"
        lineHeight="28px"
        m={4}
        mb={4}
        mt={2}
        style={
          Array [
            Object {
              "fontFamily": "AGaramondPro-Semibold",
              "fontSize": 22,
              "lineHeight": 28,
              "marginBottom": 20,
              "marginLeft": 20,
              "marginRight": 20,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ]
        }
        textAlign="center"
      >
        Registration complete
      </Text>
      <View
        mb={5}
        style={
          Array [
            Object {
              "display": "flex",
              "marginBottom": 30,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          className="sc-bdVaJa bDWFJH"
          color="black60"
          ellipsizeMode="tail"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="20px"
          style={
            Array [
              Object {
                "color": "#666",
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "center",
              },
              undefined,
            ]
          }
          textAlign="center"
        >
          Thank you for registering. You’re now eligible
to bid on works in this sale.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          

        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderColor": "rgba(229, 229, 229, 1)",
        "borderRadius": 2,
        "borderWidth": 2,
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      className="sc-bdVaJa bDWFJH"
      color="black"
      ellipsizeMode="tail"
      fontFamily="Unica77LL-Medium"
      fontSize="14px"
      lineHeight="24px"
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 14,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Registration result component renders registration error properly 1`] = `
<View
  flex={1}
  flexDirection="column"
  justifyContent="space-between"
  m={4}
  mt={6}
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "marginBottom": 20,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 40,
      },
      undefined,
    ]
  }
>
  <View>
    <View
      alignItems="center"
      style={
        Array [
          Object {},
          undefined,
        ]
      }
    >
      <Image
        height={20}
        source={
          Object {
            "testUri": "../../../images/circle-x-red.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
            undefined,
          ]
        }
        width={20}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        className="sc-bwzfXH uTxCW"
        ellipsizeMode="tail"
        fontFamily="AGaramondPro-Semibold"
        fontSize="22px"
        lineHeight="28px"
        m={4}
        mb={4}
        mt={2}
        style={
          Array [
            Object {
              "fontFamily": "AGaramondPro-Semibold",
              "fontSize": 22,
              "lineHeight": 28,
              "marginBottom": 20,
              "marginLeft": 20,
              "marginRight": 20,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ]
        }
        textAlign="center"
      >
        An error occured
      </Text>
      <View
        mb={5}
        style={
          Array [
            Object {
              "display": "flex",
              "marginBottom": 30,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          className="sc-bdVaJa bDWFJH"
          color="black60"
          ellipsizeMode="tail"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="20px"
          style={
            Array [
              Object {
                "color": "#666",
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "center",
              },
              undefined,
            ]
          }
          textAlign="center"
        >
          Please contact 
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Array [
                Object {
                  "textDecorationLine": "underline",
                },
                undefined,
              ]
            }
          >
            support@artsy.net
          </Text>
          
with any questions.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          

        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderColor": "rgba(229, 229, 229, 1)",
        "borderRadius": 2,
        "borderWidth": 2,
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      className="sc-bdVaJa bDWFJH"
      color="black"
      ellipsizeMode="tail"
      fontFamily="Unica77LL-Medium"
      fontSize="14px"
      lineHeight="24px"
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 14,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;

exports[`Registration result component renders registration pending properly 1`] = `
<View
  flex={1}
  flexDirection="column"
  justifyContent="space-between"
  m={4}
  mt={6}
  style={
    Array [
      Object {
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "marginBottom": 20,
        "marginLeft": 20,
        "marginRight": 20,
        "marginTop": 40,
      },
      undefined,
    ]
  }
>
  <View>
    <View
      alignItems="center"
      style={
        Array [
          Object {},
          undefined,
        ]
      }
    >
      <Image
        height={20}
        source={
          Object {
            "testUri": "../../../images/circle-exclamation.png",
          }
        }
        style={
          Array [
            Object {
              "height": 20,
              "width": 20,
            },
            undefined,
          ]
        }
        width={20}
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        className="sc-bwzfXH uTxCW"
        ellipsizeMode="tail"
        fontFamily="AGaramondPro-Semibold"
        fontSize="22px"
        lineHeight="28px"
        m={4}
        mb={4}
        mt={2}
        style={
          Array [
            Object {
              "fontFamily": "AGaramondPro-Semibold",
              "fontSize": 22,
              "lineHeight": 28,
              "marginBottom": 20,
              "marginLeft": 20,
              "marginRight": 20,
              "marginTop": 5,
              "textAlign": "center",
            },
            undefined,
          ]
        }
        textAlign="center"
      >
        Registration pending
      </Text>
      <View
        mb={5}
        style={
          Array [
            Object {
              "display": "flex",
              "marginBottom": 30,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          className="sc-bdVaJa bDWFJH"
          color="black60"
          ellipsizeMode="tail"
          fontFamily="Unica77LL-Regular"
          fontSize="14px"
          lineHeight="20px"
          style={
            Array [
              Object {
                "color": "#666",
                "fontFamily": "Unica77LL-Regular",
                "fontSize": 14,
                "lineHeight": 20,
                "textAlign": "center",
              },
              undefined,
            ]
          }
          textAlign="center"
        >
          Your registration status is pending.
Please contact 
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            onPress={[Function]}
            style={
              Array [
                Object {
                  "textDecorationLine": "underline",
                },
                undefined,
              ]
            }
          >
            support@artsy.net
          </Text>
           for
more information.
        </Text>
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
        >
          

        </Text>
      </View>
    </View>
  </View>
  <View
    accessible={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "rgba(255, 255, 255, 1)",
        "borderColor": "rgba(229, 229, 229, 1)",
        "borderRadius": 2,
        "borderWidth": 2,
        "height": 50,
        "justifyContent": "center",
        "opacity": 1,
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      className="sc-bdVaJa bDWFJH"
      color="black"
      ellipsizeMode="tail"
      fontFamily="Unica77LL-Medium"
      fontSize="14px"
      lineHeight="24px"
      style={
        Array [
          Object {
            "color": "black",
            "fontFamily": "Unica77LL-Medium",
            "fontSize": 14,
            "lineHeight": 24,
          },
          undefined,
        ]
      }
    >
      Continue
    </Text>
  </View>
</View>
`;
